--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <!-- Video Container -->
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/5NQ5X912axU?si=AF3m7AJn7QOxALA5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5NQ5X912axU?si=AF3m7AJn7QOxALA5?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <!-- Doğum Günü Mesajı -->
