Refactor begum.html

--- a/begum.html
+++ b/begum.html
@@ -163,14 +163,10 @@
 
     <div class="card">
       <h1>Doğum günün kutlu olsun, Begüm! 🎂✨</h1>
-      <p class="sub">Senin için özel bir şey hazırladık. Aşağıdaki butona tıkla, sürpriz başlasın! 💖</p>
+      <p class="sub">Balonlar biraz şov olmuş olabilir :D</p>
 
       <div class="cta">
         <button class="btn" id="revealBtn">🎁 Sürprizi Aç</button>
-        <div class="note" id="hint">
-          Bu sayfa videoyu <strong>senin sitenin içinden</strong> oynatır. 
-          <em>(Bağlantıyı yalnızca aşağıdaki satırda 1 kez değiştirmen yeterli.)</em>
-        </div>
       </div>
 
       <div class="video-shell" id="videoShell" aria-label="YouTube Video">
@@ -180,8 +176,7 @@
           allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
       </div>
 
-      <p class="credit">🎵 Şarkı YouTube üzerinden oynatılır. Telif hakları ilgili sahiplerine aittir.</p>
-      <div class="sig">— Sürpriz ekibinden sevgilerle</div>
+      <div class="sig">— En en iyi tırmanış öğrencin (sakat olmayan)</div>
     </div>
   </div>
 
