remove title of begum.html

--- a/begum.html
+++ b/begum.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🎂 Sürpriz Zamanı</title>
+  <title>Diabolo Master</title>
 
   <meta property="og:type" content="website">
   <meta property="og:image" content="data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1200' height='630'%3E%3Crect width='100%25' height='100%25' fill='%23ffb6c1'/%3E%3Ctext x='50%25' y='52%25' dominant-baseline='middle' text-anchor='middle' font-size='64' font-family='Arial' fill='%23ffffff'%3E🎉 SÜRPRİZ %3C/text%3E%3C/svg%3E">
