--- a/anam/mojang.html
+++ b/anam/mojang.html
@@ -73,8 +73,8 @@ body{font-family:'Arial',sans-serif;background:linear-gradient(135deg,#667eea 0%
 
 <div class="video-container" id="videoContainer">
     <button class="close-video" onclick="closeVideo()">×</button>
-    <video id="surpriseVideo" controls autoplay>
-        <source src="https://github.com/myanar7/myanar7.github.io/blob/master/anam/IMG_1482.mp4?raw=true" type="video/mp4">
+    <video id="surpriseVideo" controls autoplay muted playsinline>
+        <source src="IMG_1483.mp4" type="video/mp4">
         <p>Video yüklenemedi. Tarayıcınızın video formatını desteklediğinden emin olun.</p>
     </video>
 </div>
