--- a/jungle/routesetter.html
+++ b/jungle/routesetter.html
@@ -683,8 +683,12 @@
                     <label for="sector">Sektör</label>
                     <select id="sector" name="sector" required>
                         <option value="">Sektör seçin</option>
-                        <option value="Mağara">Mağara</option>
-                        <option value="Orta">Orta</option>
+                        <option value="Logo">Logo</option>
+                        <option value="V2">V2</option>
+                        <option value="Ufo">Ufo</option>
+                        <option value="Left Cave">Left Cave</option>
+                        <option value="Right Cave">Right Cave</option>
+                        <option value="Olympos">Olympos</option>
                         <option value="Slab">Slab</option>
                     </select>
                 </div>
