--- a/jungle/routesetter.html
+++ b/jungle/routesetter.html
@@ -684,7 +684,7 @@
                     <select id="sector" name="sector" required>
                         <option value="">Sektör seçin</option>
                         <option value="Logo">Logo</option>
-                        <option value="V2">V2</option>
+                        <option value="V-II">V-II</option>
                         <option value="Ufo">Ufo</option>
                         <option value="Left Cave">Left Cave</option>
                         <option value="Right Cave">Right Cave</option>
