--- a/jungle/index.html
+++ b/jungle/index.html
@@ -1491,8 +1491,8 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="reg-name">Adınız</label>
-                    <input type="text" id="reg-name" name="name" placeholder="Adınızı girin" required>
+                    <label for="reg-name">İsim Soyisim</label>
+                    <input type="text" id="reg-name" name="name" placeholder="İsim Soyisim girin" required>
                 </div>
                 
                 <div class="form-group">
