register fix and weeklyscore added

--- a/jungle-v2/index.html
+++ b/jungle-v2/index.html
@@ -1443,6 +1443,10 @@
                             <span class="score-label">📅 Bu Ay:</span>
                             <span class="score-value" id="user-monthly-score">0.0</span>
                         </div>
+                        <div class="score-item">
+                            <span class="score-label">🗓️ Bu Hafta:</span>
+                            <span class="score-value" id="user-weekly-score">0.0</span>
+                        </div>
                     </div>
                     <div class="user-actions">
                         <a href="leaderboard.html" class="btn btn-leaderboard">
