--- a/berrytech/index.html
+++ b/berrytech/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GreenTech Organik Tarım - Doğal ve organik ürünlerle sağlıklı yaşam">
-    <title>GreenTech A.Ş. - Organik Tarım & Hayvancılık</title>
+    <meta name="description" content="GreenTech Tarım - BerryTech markası ile İyi Tarım ve Global Gap sertifikalı premium çilek üretimi. 13.000 m² örtüaltı topraksız tarım.">
+    <title>GreenTech A.Ş. - BerryTech Premium Çilek Üretimi</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -35,7 +35,7 @@
                     <img src="1.jpeg" alt="GreenTech Logo" class="logo-img">
                     <div class="logo-text">
                         <h1>GreenTech</h1>
-                        <p>Organik Tarım & Hayvancılık</p>
+                        <p>BerryTech - Premium Çilek</p>
                     </div>
                 </div>
                 <ul class="nav-menu">
@@ -55,11 +55,14 @@
 
     <!-- Hero Section -->
     <section id="anasayfa" class="hero">
+        <video autoplay muted loop playsinline class="hero-video">
+            <source src="video5.mp4" type="video/mp4">
+        </video>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h1 class="hero-title">GreenTech Organik Tarım</h1>
-            <p class="hero-subtitle">Doğanın Gücüyle, Geleceğe Nefes</p>
-            <p class="hero-description">Organik tarım ve hayvancılık sektöründe kalite ve güvenin adresi</p>
+            <h1 class="hero-title">GreenTech A.Ş</h1>
+            <p class="hero-subtitle">bir çilek yeter bazen…</p>
+            <p class="hero-description">mutluluğu hatırlatır<br>canlandırır içini<br>samimiyetle sunulur</p>
             <a href="#iletisim" class="btn-primary">Bize Ulaşın</a>
         </div>
         <div class="scroll-indicator">
@@ -76,25 +79,27 @@
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <h3>GreenTech Organik Tarım</h3>
-                    <p>GreenTech Organik Tarım Hayvancılık Sanayi ve Ticaret A.Ş. olarak, doğal ve organik tarım ürünleri ile hayvancılık sektöründe faaliyet göstermekteyiz.</p>
-                    <p>Antalya'nın Döşemealtı ilçesinde konumlanan tesislerimizde, modern tarım teknikleri ile geleneksel bilgiyi harmanlayarak, hem çevreye duyarlı hem de kaliteli ürünler üretiyoruz.</p>
-                    <p>Misyonumuz, sağlıklı ve doğal ürünleri tüketicilerimize ulaştırarak, sürdürülebilir tarım ve hayvancılığa katkıda bulunmaktır.</p>
+                    <h3>GreenTech Tarım</h3>
+                    <p>Greentech Tarım Hayvancılık Anonim Şirketi 2025 yılında Antalya Döşemealtı bölgesinde kurulmuş olup toplam 13.000 metrekare alanda örtüaltı topraksız tarım ile çilek üretimi yapmaktadır.</p>
+                    <p>Firmamız bünyesinde çilek nezdinde BerryTech adında bir markamız bulunmaktadır. İç pazara bu marka ile satış yapmaktayız. Firmamız İyi Tarım ve Global Gap belgelerine sahiptir.</p>
+                    <p>Üretim alanımızda 2 farklı çeşit ile kışlık üretim yapmaktayız. İlk çeşidimiz <strong>FELICITY (FL 17 15 86 cv.)</strong> 11.5-12 brix değerine sahip olup sezon boyunca hasat edebileceğimiz sert dokulu orta büyüklükte bir çeşittir.</p>
+                    <p>Diğer çeşidimiz <strong>PRİMAVERA®️ 'BG-6.3016'</strong> 10-11 brix değerine sahip olup orta büyük boyutlara sahiptir, sert dokusuyla hasat sonrası dayanımı yüksektir.</p>
+                    <p>Bahsedilen çeşitlerin beslemesi ve bakımı uzman kişiler tarafından tamamı ruhsatlı ürünlerle yapılmaktadır. İstenmeyen bir kalıntı söz konusu değildir.</p>
                     <div class="features">
                         <div class="feature-item">
-                            <i class="fas fa-leaf"></i>
-                            <h4>%100 Organik</h4>
-                            <p>Kimyasal gübre ve ilaç kullanmadan yetiştirilen ürünler</p>
+                            <i class="fas fa-seedling"></i>
+                            <h4>13.000 m² Üretim Alanı</h4>
+                            <p>Örtüaltı topraksız tarım teknolojisi</p>
                         </div>
                         <div class="feature-item">
                             <i class="fas fa-certificate"></i>
-                            <h4>Sertifikalı</h4>
-                            <p>Uluslararası kalite standartlarında üretim</p>
+                            <h4>İyi Tarım & Global Gap</h4>
+                            <p>Uluslararası kalite standartlarında sertifikalı üretim</p>
                         </div>
                         <div class="feature-item">
                             <i class="fas fa-heart"></i>
-                            <h4>Güvenilir</h4>
-                            <p>Şeffaf ve kontrollü üretim süreçleri</p>
+                            <h4>BerryTech Markası</h4>
+                            <p>Premium çilek çeşitleri ve güvenilir kalite</p>
                         </div>
                     </div>
                 </div>
@@ -120,14 +125,40 @@
     <section class="video-section">
         <div class="container">
             <div class="section-header">
-                <h2>Tanıtım Videosu</h2>
+                <h2>Tanıtım Videoları</h2>
                 <div class="divider"></div>
             </div>
-            <div class="video-container">
-                <video controls poster="">
-                    <source src="video.mp4" type="video/mp4">
-                    Tarayıcınız video etiketini desteklemiyor.
-                </video>
+            <div class="video-grid">
+                <div class="video-container">
+                    <video controls muted>
+                        <source src="video1.mp4" type="video/mp4">
+                        Tarayıcınız video etiketini desteklemiyor.
+                    </video>
+                </div>
+                <div class="video-container">
+                    <video controls muted>
+                        <source src="video2.mp4" type="video/mp4">
+                        Tarayıcınız video etiketini desteklemiyor.
+                    </video>
+                </div>
+                <div class="video-container">
+                    <video controls muted>
+                        <source src="video3.mp4" type="video/mp4">
+                        Tarayıcınız video etiketini desteklemiyor.
+                    </video>
+                </div>
+                <div class="video-container">
+                    <video controls muted>
+                        <source src="video4.mp4" type="video/mp4">
+                        Tarayıcınız video etiketini desteklemiyor.
+                    </video>
+                </div>
+                <div class="video-container">
+                    <video controls muted>
+                        <source src="video6.mp4" type="video/mp4">
+                        Tarayıcınız video etiketini desteklemiyor.
+                    </video>
+                </div>
             </div>
         </div>
     </section>
@@ -147,9 +178,16 @@
                         <p>Selimiye Mh. 9006 Sk. No:50<br>Döşemealtı, Antalya</p>
                     </div>
                     <div class="info-card">
+                        <i class="fas fa-envelope"></i>
+                        <h3>E-posta</h3>
+                        <a href="mailto:greentechtarim@gmail.com" class="social-link">
+                            greentechtarim@gmail.com
+                        </a>
+                    </div>
+                    <div class="info-card">
                         <i class="fas fa-building"></i>
                         <h3>Şirket Bilgileri</h3>
-                        <p><strong>GreenTech Organik Tarım Hayvancılık Sanayi ve Ticaret A.Ş.</strong></p>
+                        <p><strong>GreenTech Tarım Hayvancılık Anonim Şirketi</strong></p>
                         <p>Vergi Dairesi: Kurumlar V.D.</p>
                         <p>Vergi No: 411 116 4918</p>
                     </div>
@@ -195,7 +233,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>GreenTech A.Ş.</h3>
-                    <p>Organik tarım ve hayvancılık sektöründe kalite ve güvenin adresi</p>
+                    <p>BerryTech markası ile premium çilek üretiminde kalite ve güvenin adresi</p>
                 </div>
                 <div class="footer-section">
                     <h3>Hızlı Bağlantılar</h3>
