remove global gap

--- a/berrytech/index.html
+++ b/berrytech/index.html
@@ -81,7 +81,7 @@
                 <div class="about-text">
                     <h3>GreenTech Tarım</h3>
                     <p>Greentech Tarım Hayvancılık Anonim Şirketi 2025 yılında Antalya Döşemealtı bölgesinde kurulmuş olup toplam 13.000 metrekare alanda örtüaltı topraksız tarım ile çilek üretimi yapmaktadır.</p>
-                    <p>Firmamız bünyesinde çilek nezdinde BerryTech adında bir markamız bulunmaktadır. İç pazara bu marka ile satış yapmaktayız. Firmamız İyi Tarım ve Global Gap belgelerine sahiptir.</p>
+                    <p>Firmamız bünyesinde çilek nezdinde BerryTech adında bir markamız bulunmaktadır. İç pazara bu marka ile satış yapmaktayız. Firmamız İyi Tarım belgesine sahiptir.</p>
                     <p>Üretim alanımızda 2 farklı çeşit ile kışlık üretim yapmaktayız. İlk çeşidimiz <strong>FELICITY (FL 17 15 86 cv.)</strong> 11.5-12 brix değerine sahip olup sezon boyunca hasat edebileceğimiz sert dokulu orta büyüklükte bir çeşittir.</p>
                     <p>Diğer çeşidimiz <strong>PRİMAVERA®️ 'BG-6.3016'</strong> 10-11 brix değerine sahip olup orta büyük boyutlara sahiptir, sert dokusuyla hasat sonrası dayanımı yüksektir.</p>
                     <p>Bahsedilen çeşitlerin beslemesi ve bakımı uzman kişiler tarafından tamamı ruhsatlı ürünlerle yapılmaktadır. İstenmeyen bir kalıntı söz konusu değildir.</p>
@@ -90,11 +90,6 @@
                             <i class="fas fa-seedling"></i>
                             <h4>13.000 m² Üretim Alanı</h4>
                             <p>Örtüaltı topraksız tarım teknolojisi</p>
-                        </div>
-                        <div class="feature-item">
-                            <i class="fas fa-certificate"></i>
-                            <h4>İyi Tarım & Global Gap</h4>
-                            <p>Uluslararası kalite standartlarında sertifikalı üretim</p>
                         </div>
                         <div class="feature-item">
                             <i class="fas fa-heart"></i>
