erkut working days

--- a/erkut/index.html
+++ b/erkut/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hüseyin'in Çalışma Takvimi</title>
+    <title>Erkut'un Çalışma Takvimi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="main-container">
-        <h1>Hüseyin'in Çalışma Takvimi</h1>
+        <h1>Erkut'un Çalışma Takvimi</h1>
         <div class="calendar-container">
             <div class="calendar-header">
                 <button id="prev-month">&lt;</button>
@@ -37,6 +37,11 @@
                     <span>İzin Günü (Off)</span>
                 </div>
             </div>
+        </div>
+        <div class="safak-container">
+            <h2>Şafak Sayacı</h2>
+            <p>25 Ağustos 2026 tarihine kalan süre:</p>
+            <p id="safak-counter">Hesaplanıyor...</p>
         </div>
     </div>
 
